--- a/LeNet-Lab_MNIST.ipynb
+++ b/LeNet-Lab_MNIST.ipynb
@@ -21,9 +21,7 @@
    "source": [
     "## Load Data\n",
     "\n",
-    "Load the MNIST data, which comes pre-loaded with TensorFlow.\n",
-    "\n",
-    "You do not need to modify this section."
+    "Lets load the MNIST data, which comes pre-loaded with TensorFlow."
    ]
   },
   {
@@ -83,9 +81,7 @@
     "\n",
     "However, the LeNet architecture only accepts 32x32xC images, where C is the number of color channels.\n",
     "\n",
-    "In order to reformat the MNIST data into a shape that LeNet will accept, we pad the data with two rows of zeros on the top and bottom, and two columns of zeros on the left and right (28+2+2 = 32).\n",
-    "\n",
-    "You do not need to modify this section."
+    "In order to reformat the MNIST data into a shape that LeNet will accept, we pad the data with two rows of zeros on the top and bottom, and two columns of zeros on the left and right (28+2+2 = 32).\n"
    ]
   },
   {
@@ -126,8 +122,7 @@
     "## Visualize Data\n",
     "\n",
     "View a sample from the dataset.\n",
-    "\n",
-    "You do not need to modify this section."
+    "\n"
    ]
   },
   {
@@ -181,8 +176,7 @@
     "## Preprocess Data\n",
     "\n",
     "Shuffle the training data.\n",
-    "\n",
-    "You do not need to modify this section."
+    "\n"
    ]
   },
   {
@@ -209,8 +203,7 @@
    "source": [
     "## Setup TensorFlow\n",
     "The `EPOCH` and `BATCH_SIZE` values affect the training speed and model accuracy.\n",
-    "\n",
-    "You do not need to modify this section."
+    "\n"
    ]
   },
   {
@@ -236,37 +229,37 @@
     "editable": true
    },
    "source": [
-    "## SOLUTION: Implement LeNet-5\n",
-    "Implement the [LeNet-5](http://yann.lecun.com/exdb/lenet/) neural network architecture.\n",
+    "## LeNet-5\n",
+    "[LeNet-5](http://yann.lecun.com/exdb/lenet/) neural network architecture.\n",
     "\n",
-    "This is the only cell you need to edit.\n",
+    "\n",
     "### Input\n",
     "The LeNet architecture accepts a 32x32xC image as input, where C is the number of color channels. Since MNIST images are grayscale, C is 1 in this case.\n",
     "\n",
     "### Architecture\n",
-    "**Layer 1: Convolutional.** The output shape should be 28x28x6.\n",
+    "**Layer 1: Convolutional.** The output shape is 28x28x6.\n",
     "\n",
-    "**Activation.** Your choice of activation function.\n",
+    "**Activation.** Let's use ReLu activation function.\n",
     "\n",
-    "**Pooling.** The output shape should be 14x14x6.\n",
+    "**Pooling.** The output shape is 14x14x6.\n",
     "\n",
-    "**Layer 2: Convolutional.** The output shape should be 10x10x16.\n",
+    "**Layer 2: Convolutional.** The output shape is 10x10x16.\n",
     "\n",
-    "**Activation.** Your choice of activation function.\n",
+    "**Activation.** Let's use ReLu activation function.\n",
     "\n",
-    "**Pooling.** The output shape should be 5x5x16.\n",
+    "**Pooling.** The output shape is 5x5x16.\n",
     "\n",
-    "**Flatten.** Flatten the output shape of the final pooling layer such that it's 1D instead of 3D. The easiest way to do is by using `tf.contrib.layers.flatten`, which is already imported for you.\n",
+    "**Flatten.** Flatten the output shape of the final pooling layer such that it's 1D instead of 3D.\n",
     "\n",
-    "**Layer 3: Fully Connected.** This should have 120 outputs.\n",
+    "**Layer 3: Fully Connected.** This one have 120 outputs.\n",
     "\n",
-    "**Activation.** Your choice of activation function.\n",
+    "**Activation.** Let's use ReLu activation function.\n",
     "\n",
-    "**Layer 4: Fully Connected.** This should have 84 outputs.\n",
+    "**Layer 4: Fully Connected.** This one have 84 outputs.\n",
     "\n",
-    "**Activation.** Your choice of activation function.\n",
+    "**Activation.** Let's use ReLu activation function.\n",
     "\n",
-    "**Layer 5: Fully Connected (Logits).** This should have 10 outputs.\n",
+    "**Layer 5: Fully Connected (Logits).** This one have 10 outputs.\n",
     "\n",
     "### Output\n",
     "Return the result of the 2nd fully connected layer."
@@ -319,30 +312,30 @@
     "        'out': tf.Variable(tf.zeros(10))\n",
     "    }\n",
     "    \n",
-    "    # TODO: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
-    "    # TODO: Activation.\n",
-    "    # TODO: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    # Activation.\n",
+    "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
     "    c1 = conv2d(x, weights['wc1'], biases['bc1'], padding='VALID')       \n",
     "    c1 = maxpool2d(c1, k=2, padding='VALID')\n",
     "\n",
-    "    # TODO: Layer 2: Convolutional. Output = 10x10x16.    \n",
-    "    # TODO: Activation.\n",
-    "    # TODO: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    # Layer 2: Convolutional. Output = 10x10x16.    \n",
+    "    # Activation.\n",
+    "    # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
     "    c2 = conv2d(c1, weights['wc2'], biases['bc2'], padding='VALID')       \n",
     "    c2 = maxpool2d(c2, k=2, padding='VALID')\n",
     "\n",
-    "    # TODO: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    # Flatten. Input = 5x5x16. Output = 400.\n",
     "    c2_flat = flatten(c2)\n",
     "    \n",
-    "    # TODO: Layer 3: Fully Connected. Input = 400. Output = 120.    \n",
-    "    # TODO: Activation.\n",
+    "    # Layer 3: Fully Connected. Input = 400. Output = 120.    \n",
+    "    # Activation.\n",
     "    fc1 = fc_relu(c2_flat, weights['wfc1'], biases['bfc1'])       \n",
     "\n",
-    "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84.    \n",
-    "    # TODO: Activation.\n",
+    "    # Layer 4: Fully Connected. Input = 120. Output = 84.    \n",
+    "    # Activation.\n",
     "    fc2 = fc_relu(fc1, weights['wfc2'], biases['bfc2'])\n",
     "\n",
-    "    # TODO: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    # Layer 5: Fully Connected. Input = 84. Output = 10.\n",
     "    logits = tf.add(tf.matmul(fc2, weights['out']), biases['out'])\n",
     "    \n",
     "    return logits"
@@ -360,8 +353,7 @@
     "\n",
     "`x` is a placeholder for a batch of input images.\n",
     "`y` is a placeholder for a batch of output labels.\n",
-    "\n",
-    "You do not need to modify this section."
+    "\n"
    ]
   },
   {
@@ -388,8 +380,7 @@
    "source": [
     "## Training Pipeline\n",
     "Create a training pipeline that uses the model to classify MNIST data.\n",
-    "\n",
-    "You do not need to modify this section."
+    "\n"
    ]
   },
   {
@@ -420,8 +411,7 @@
    "source": [
     "## Model Evaluation\n",
     "Evaluate how well the loss and accuracy of the model for a given dataset.\n",
-    "\n",
-    "You do not need to modify this section."
+    "\n"
    ]
   },
   {
@@ -464,8 +454,7 @@
     "After each epoch, measure the loss and accuracy of the validation set.\n",
     "\n",
     "Save the model after training.\n",
-    "\n",
-    "You do not need to modify this section."
+    "\n"
    ]
   },
   {
@@ -548,13 +537,11 @@
    },
    "source": [
     "## Evaluate the Model\n",
-    "Once you are completely satisfied with your model, evaluate the performance of the model on the test set.\n",
+    "Once we are completely satisfied with the model, we evaluate the performance of the model on the test set.\n",
     "\n",
-    "Be sure to only do this once!\n",
+    "We test it only once!\n",
     "\n",
-    "If you were to measure the performance of your trained model on the test set, then improve your model, and then measure the performance of your model on the test set again, that would invalidate your test results. You wouldn't get a true measure of how well your model would perform against real data.\n",
-    "\n",
-    "You do not need to modify this section."
+    "If we were to measure the performance of our trained model on the test set, then improve our model, and then measure the performance of our model on the test set again, that would invalidate our test results. We wouldn't get a true measure of how well our model would perform against real data.\n"
    ]
   },
   {
